# gazebo_simulation_generator

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_gen.launch
msg/: ObjectSpawn.msg
scripts/: gazebo_spawn_client.py  gazebo_spawn_server.py  object_detect.py  update_robot_in_simulation.py
srv/: ObjectSpawn.srv
